# sae-behavioral-preservation

./: .gitignore  .gitleaks.toml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.txt
analysis/: aom_clt_topk_recovery.py
aom/: README.md  __init__.py  config.py  io.py  repro.py  run_manifest.py  stats.py  token_spans.py  utils.py
data/: README.md
data_paper_hardened_v2/: DATASET_MANIFEST.json  disamb_pairs.jsonl
docs/: SAE_WRITEBACK_LIMITATION_QUICKSTART.md
paper/: sae_writeback_limitation_paper.md  sae_writeback_limitation_short_paper.md
results/: README.md
scripts/: README.md  build_limitation_release_surface.py  check_limitation_short_paper_numbers.py  clt_raw_comparability.py  limitation_analysis_policy.py  limitation_requirements.py  limitation_surface.py  prepare_limitation_bundle.py  render_disamb_appendix_table.py  render_limitation_five_layer_profile.py  render_short_paper_pdf.py  reproduction_common.py  run_limitation_one_result_check.py  run_limitation_one_result_check_gpu.py  run_limitation_paper.py  verify_limitation_one_result_check.py  verify_limitation_reproduce.py
tests/: conftest.py  test_bundle_manifest.py  test_clt_adapter.py  test_clt_cpt.py  test_clt_loader.py  test_clt_patch.py  test_clt_raw_comparability_bootstrap.py  test_clt_raw_comparability_cli.py  test_clt_raw_comparability_pca.py  test_clt_topk_recovery.py  test_data.py  test_dataset_manifest.py  test_determinism.py  test_imports.py  test_jumprelu_integration.py  test_limitation_release_surface.py  test_limitation_short_paper_numbers.py  (+7 more)
(+40 files in other folders)
