[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aom-mechanism"
version = "1.0.4"
description = "Artifact and verification surface for mechanics-focused AoM research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["aom"]
